// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package chromeos.recovery;

option go_package = "infra/cros/recovery/models;models";

// RecoveryVersion represents stable version information to be used for repair
message RecoveryVersion {
    string board = 1;
    string model = 2;
    string os_image = 3;
    string fw_version = 4;
    string fw_image = 5;
}
